[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diaryvault-memory"
version = "0.1.0"
description = "An open-source memory layer for humans. Cryptographically verified, encrypted, permanent memory records."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DiaryVault", email = "hello@diaryvault.com"},
]
keywords = ["memory", "encryption", "journal", "blockchain", "privacy", "diary", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
arweave = [
    "arweave-python-client>=1.0.0",
]
ethereum = [
    "web3>=6.0.0",
]

[project.urls]
Homepage = "https://diaryvault.com"
Documentation = "https://github.com/diaryvault/memory-layer/docs"
Repository = "https://github.com/diaryvault/memory-layer"
Issues = "https://github.com/diaryvault/memory-layer/issues"

[tool.setuptools.packages.find]
where = ["sdk"]
