[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diaryvault-memory"
version = "0.4.0"
description = "Reviewable, tamper-evident memory records with suggestion provenance and approval-aware exports."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "DiaryVault", email = "hello@diaryvault.com"},
]
keywords = ["memory", "encryption", "privacy", "provenance", "ai-agents", "rag", "knowledge-graph", "selective-sharing", "approval", "review-workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://diaryvault.com"
Documentation = "https://github.com/DiaryVault/diaryvault-memory-layer/tree/main/docs"
Repository = "https://github.com/DiaryVault/diaryvault-memory-layer"
Issues = "https://github.com/DiaryVault/diaryvault-memory-layer/issues"

[tool.setuptools.packages.find]
where = ["sdk"]
